# DeepCNNClassifier

./: .gitignore  README.md  init_setup.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
research/: st_01.ipynb  trials.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: data_ingestion.py
src/deepClassifier/config/: configuration.py
src/deepClassifier/entity/: config_entity.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py
src/deepClassifier/utils/: common.py
tests/unit/: test_utils.py
