[metadata]
license = APACHE
license_file = LICENSE
classifier = 
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires = 
    ensure == 1.0.2
python_requires = >= 3.10

[options.extras_require]
testing = 
    pytest >= 7.1.3   #run unit test or integeration test
    mypy >= 0.971    #check weather there is typing error or not
    flake8 >= 5.0.4   #if there is an extra space that will be highlited by flake8
    tox >= 3.25.1    #work for different working environment
    black >= 22.8.0   #check format of your python code

[option.pacakge_data]
deepClassifier = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
